# Scrap-Folha-SP

./: README.md  pyproject.toml
src/orchestrator/: orchestrator.py
src/services/: driver.py  folha_search.py
