[project]
name = "scrap-folha-sp"
version = "0.1.0"
description = ""
authors = [
    {name = "Kauai Staingel",email = "kauaimachado@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.40.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
